--- a/journal/201904.md
+++ b/journal/201904.md
@@ -2,11 +2,11 @@
 
 # صحيفة الديكريد لشهر أبريل 2019
 
-![abstract art](../img/journal-201904-384.jpg)
+![abstract art](../img/journal-201904-384.jpg "Blue Dragon by @saender. Dragon resembles power/fear/terror/chaos. Blue dragon is calm and intelligent, but nevertheless powerful. It resembles a balance of power and wisdom.")
 
 شهد شهر أبريل إطلاق الشبكة البرقية على تيستنيت الخاص بـالديكريد! هذا هو الوقت المناسب [للتحقق منه](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e)، القيام ببعض الاختبارات، والبدء في البناء على الشبكة البرقية للديكريد.
 
-ستصبح الشبكة البرقية متاحة على الشبكة الرئيسية عندما يتم تفعيل DCP0004 في 9 من ماي (على الكتلة 342،784)، لكن الأمر سيستغرق بعض الوقت قبل إنشائها وثباتها بدرجة كافية للاستخدام على شبكة الإختبار - الشبكة الرئيسية في الوقت الحالي هي المكان الأنسب لتجربة الشبكة البرقية للديكريد. من المهم أيضًا **أن تتم ترقية كافة العقد قبل 9 ماي لتجنب التفرع خارج للشبكة.**
+ستصبح الشبكة البرقية متاحة على الشبكة الرئيسية عندما يتم تفعيل DCP0004 في 9 من ماي (على الكتلة 342،784)، لكن الأمر سيستغرق بعض الوقت قبل إنشائها وثباتها بدرجة كافية للاستخدام على شبكة الإختبار - الشبكة الرئيسية في الوقت الحالي هي المكان الأنسب لتجربة الشبكة البرقية للديكريد. من المهم أيضًا **أن تتم ترقية كافة العقد قبل 9 ماي لتجنب التفرع خارج للشبكة!**
 
 شهدت برمجيات بوليتيا جولة هامة من التحسينات في الأداء وخصائص جديدة (مثل عرض الاختلافات للنسخ المقترحة) والتي نشرت على موقع المقترحات المباشرة. أصبح نظام إدارة المقاولين جاهزا للعمل بشكل أساسي وسيتم استخدامه لجمع ومعالجة فواتير المقاولين لشهر أبريل.
 
@@ -18,35 +18,35 @@
 
 ## التطوير
 
-[dcrd](https://github.com/decred/dcrd): تستمر إعادة تغيير تصميم البرنامج مع تنظيف الوظائف والشروط غير المستخدمة، وإدخال تحسينات على كود التعدين وتجديد وحدة `chaincfg`. أصبح من الممكن الآن إجراء تحديثات دقيقة لرموز التشفير دون كسر الأشياء نظرًا للعمل السابق على الوحدات النمطية التي تم إصدارها، والتي أصبحت متاحة الآن وضمن الاستخدام الكامل.
+[dcrd](https://github.com/decred/dcrd): تستمر إعادة تغيير تصميم البرنامج مع تنظيف الوظائف والشروط غير المستخدمة، وإدخال تحسينات على كود التعدين وتجديد وحدة `chaincfg`. أصبح من الممكن الآن إجراء تحديثات دقيقة لرموز التشفير دون كسر الأشياء نظرًا للعمل السابق على الوحدات النمطية التي تم إصدارها، والتي أصبحت متاحة الآن وتستخدم بصورة كاملة.
 
-[dcrwallet](https://github.com/decred/dcrwallet): تنظيف كود التشفير وإدخال التحسينات على كود شراء التذاكر. بدأ العمل لإضافة [مصادقة اختيارية](https://github.com/decred/dcrwallet/pull/1437) لواجهة برمجة تطبيقات gRPC، والتي تتيح للمستخدمين حذف عبارة المرور الخاصة في واجهة برمجة تطبيقات المكالمات التي تتطلب محفظة غير مقفلة. سيؤدي ذلك إلى التخفيف من المشكلات التي تنشأ عند عزل المحافظ غير المؤمّنة عبر التجزئة الفعلية والشبكات.
+[dcrwallet](https://github.com/decred/dcrwallet): تنظيف كود التشفير وإدخال التحسينات على كود شراء التذاكر. بدأ العمل لإضافة [مصادقة اختيارية](https://github.com/decred/dcrwallet/pull/1437) لواجهة برمجة تطبيقات gRPC، والتي تتيح للمستخدمين حذف عبارة المرور الخاصة في واجهة برمجة تطبيقات المكالمات والتي تتطلب محفظة غير مقفلة. سيؤدي ذلك إلى التخفيف من المشكلات التي تنشأ عند عزل المحافظ غير المؤمّنة عبر التجزئة الفعلية والشبكات.
 
-[Decrediton](https://github.com/decred/decrediton): استمر العمل على جعل تصميم ديكريديتون أكثر استجابة (بحيث يمكن استخدامه على شاشات أصغر حجما)، مع استكمال التصاميم المستجيبة لجميع المشاهدات تقريبا الموجودة في هذه [المسألة الرئيسية](https://github.com/decred/decrediton/issues/1820). وقد تم [تنفيذ](https://github.com/decred/decrediton/pull/2094) التصميم الجديد المتجاوب في `إنشاء عرض محفظة جديدة`. تم فتح [طلب سحب](https://github.com/decred/decrediton/pull/2107) لإضافة واجهة مستخدم محفظة الشبكة البرقية إلى ديكريديتون؛ سيتيح هذا الإصدار الأولي لمستخدمي ديكريديتون تنفيذ إجراءات مثل فتح/إغلاق القناة، إضافة/سحب الأموال، إنشاء الفواتير، وإرسال المدفوعات.
+[ديكريديتون](https://github.com/decred/decrediton): استمر العمل على جعل تصميم ديكريديتون أكثر استجابة (بحيث يمكن استخدامه على شاشات أصغر حجما)، مع استكمال التصاميم المستجيبة لجميع المشاهدات تقريبا والتي ستجدها في هذه [المسألة الرئيسية](https://github.com/decred/decrediton/issues/1820). كما تم [تنفيذ](https://github.com/decred/decrediton/pull/2094) التصميم الجديد المتجاوب في `إنشاء عرض محفظة جديدة`. وقد تم فتح [طلب سحب](https://github.com/decred/decrediton/pull/2107) لإضافة واجهة مستخدم محفظة الشبكة البرقية إلى ديكريديتون؛ سيتيح هذا الإصدار الأولي لمستخدمي ديكريديتون تنفيذ إجراءات مثل فتح/إغلاق القناة، إضافة/سحب الأموال، إنشاء الفواتير، وإرسال المدفوعات.
 
-[Politeia](https://github.com/decred/politeia): تم [نشر](https://twitter.com/marco_peereboom/status/1120398754216062978) تحديث على موقع الاقتراحات المباشرة والذي يجلب تحسينات ملحوظة في الأداء، ويضيف مستعرض الإختلاف إلى القائمة المنسدلة لمشاهد محفوظات إصدار الاقتراح، وتغيير الترتيب الافتراضي للتعليقات لإظهار التعليقات الأعلى درجة أولا. نظام إدارة المقاول جاهز للاستخدام وسيستخدم من قبل المقاولين لإرسال فواتيرهم لشهر أبريل.
+[بوليتيا](https://github.com/decred/politeia): تم [نشر](https://twitter.com/marco_peereboom/status/1120398754216062978) تحديث على موقع الاقتراحات المباشرة والذي سيجلب تحسينات ملحوظة في الأداء، كما يضيف مستعرض الإختلاف إلى القائمة المنسدلة لمشاهد محفوظات إصدار الاقتراح، وتغيير الترتيب الافتراضي للتعليقات حتى تظهر التعليقات الأعلى درجة أولا. أصبح نظام إدارة المقاول جاهز للاستخدام وسيستخدم من قبل المقاولين لإرسال فواتيرهم لشهر أبريل.
 
-[dcrlnd](https://github.com/decred/dcrlnd): الشبكة البرقية (LN) للديكريد حية على شبكة الإختبار. بعد شهور من العمل الشاق والعديد من التغييرات عبر المجموعة الكاملة للبرمجيات، منفذ الديكريد الرسمي من [lnd daemon](https://github.com/lightningnetwork/lnd) الأصلي، [dcrlnd](https://github.com/decred/dcrlnd)، تم [إصداره](https://matheusd.com/post/announcing-dcrlnd/) وجاهز للإستخدام على شبكة الاختبار. تم إعتماد جميع اختبارات الوحدة والإدماج لمشروع الشبكة البرقية، كما قد قارب الإنتهاء [للدمج](https://github.com/decred/decrediton/pull/2107) الأولي مع ديكريديتون.
+[dcrlnd](https://github.com/decred/dcrlnd): الشبكة البرقية (LN) للديكريد حية على شبكة الإختبار. بعد شهور من العمل الشاق والعديد من التغييرات عبر المجموعة الكاملة للبرمجيات، تم [إصدار](https://matheusd.com/post/announcing-dcrlnd/) منفذ الديكريد الرسمي من [lnd daemon](https://github.com/lightningnetwork/lnd) الأصلي، [dcrlnd](https://github.com/decred/dcrlnd)، وأصبح وجاهزا للإستخدام على شبكة الاختبار. كما تم إعتماد جميع اختبارات الوحدة والإدماج لمشروع الشبكة البرقية، وقد قارب الإنتهاء [الدمج](https://github.com/decred/decrediton/pull/2107) الأولي مع ديكريديتون.
 
 تم [تصميم](https://github.com/matheusd/lightning-faucet/pull/4) صنبور الشبكة البرقية lnd لإضفاء شكل ومظهر لائقين للديكريد. تحقق [هنا](https://testnet-dcrln-01.davec.name/) بإلقاء نظرة خاطفة على واحدة من عدة صنابير لشبكة الإختبار.
 
-يجري العمل على إعداد الشبكة البرقية على الشبكة الرئيسية، وسيتم تقنيا تمكين الشبكة البرقية على الشبكة الرئيسية بعد [تفعيل] برنامج `fixlnseqlock` في الكتلة 342،784 في 9 ماي. سيستغرق بناء الشبكة وتحسين تجربة المستعملين بعض الوقت. وينبغي أن يعتبر استخدام الشبكة البرقية التابعة للديكريد في الوقت الراهن تجريبيا ولا يجب إستعمال مبالغ كبيرة من DCR. التيستنيت هي المكان الذي سيحدث فيه إجراء الشبكة البرقية لبعض الوقت. مكنك متابعة نمو تيستنيت الشبكة البرقية من خلال هذا [الرسم البياني للشبكة](http://ln-map.jamieholdstock.com/).
+يجري العمل على إعداد الشبكة البرقية على الشبكة الرئيسية، وسيتم تقنيا تمكين الشبكة البرقية على الشبكة الرئيسية بعد [تفعيل](https://explorer.dcrdata.org/agendas) مخطط `fixlnseqlock` في الكتلة 342،784 في 9 ماي. سيستغرق بناء الشبكة وتحسين تجربة المستعملين بعض الوقت. وينبغي أن يعتبر استخدام الشبكة البرقية التابعة للديكريد في الوقت الراهن تجريبيا ولا يجب إستعمال مبالغ كبيرة من DCR. التيستنيت هي المكان الذي سيحدث  فيه اتخاذ إجراءات الشبكة البرقية لبعض الوقت. يمكنك متابعة نمو تيستنيت الشبكة البرقية من خلال هذا [الرسم البياني للشبكة](http://ln-map.jamieholdstock.com/).
 
-[dcrandroid](https://github.com/decred/dcrandroid): يستمر إصلاح الأخطاء الطفيفة وتحسينات اللغة. خيار التوثيق البيومتري الاختياري [قيد التنفيذ](https://github.com/decred/dcrandroid/pull/343) وسيتم إصداره في النسخة التالية، مضيفًا طبقة إضافية من الأمن على رأس إدخال عبارة مرور المحفظة.
+[dcrandroid](https://github.com/decred/dcrandroid): يستمر إصلاح الأخطاء الطفيفة وتحسينات اللغة. أصبح خيار التوثيق البيومتري الاختياري [قيد التنفيذ](https://github.com/decred/dcrandroid/pull/343) وسيتم إصداره في النسخة التالية، مضيفًا طبقة إضافية من الأمن على رأس إدخال عبارة مرور المحفظة.
 
-[dcrios](https://github.com/raedahgroup/dcrios): شهدت dcrios beta الاختبار المستمر من قبل أفراد المجتمع والتحسينات في واجهة المستخدم. لا يزال هناك عدد قليل من الأخطاء المعلقة، ويواصل المطورون العمل على  الإجراءات الرسمية للحصول على الموافقة على التطبيق من قبل متجر أبل.
+[dcrios](https://github.com/raedahgroup/dcrios): تم الاختبار المستمر ل dcrios beta  من قبل أفراد المجتمع والتحسينات في واجهة المستخدم. لا يزال هناك عدد قليل من الأخطاء المعلقة، ويواصل المطورون العمل على الإجراءات الرسمية للحصول على الموافقة على التطبيق من قبل متجر أبل.
 
-[dcrdata](https://github.com/decred/dcrdata): تم إصدار النسخة 4.1.0 ونشرها على [explorer.dcrdata.org](https://explorer.dcrdata.org/). وتضيف هذه النسخة [تتبعًا مباشرا](https://explorer.dcrdata.org/agendas) للأصوات على السلسلة من أجل إدخال تغييرات في قواعد الإجماع، إلى جانب عدد من تحسينات الأداء والتطوير المدرجة في [ملاحظات الإصدار](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). تمت إضافة قوائم التصويت [لمقترحات بوليتيا](https://alpha.dcrdata.org/proposals) على موقع ألفا ويجري التكرار عليها.
+[dcrdata](https://github.com/decred/dcrdata): تم إصدار النسخة 4.1.0 ونشرها على [explorer.dcrdata.org](https://explorer.dcrdata.org/). وقد أضيفت ميزة [التتبع المباشر](https://explorer.dcrdata.org/agendas) للأصوات على السلسلة على هذه النسخة من أجل إدخال تغييرات في قواعد الإجماع، إلى جانب إدراج عدد من تحسينات الأداء والتطوير في [ملاحظات الإصدار](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). كما تمت إضافة قوائم التصويت [لمقترحات بوليتيا](https://alpha.dcrdata.org/proposals) على موقع ألفا ويجري التكرار عليها.
 
-[المستندات](https://github.com/decred/dcrdocs): صفحات جديدة: يصف [التعدين الأولي](https://docs.decred.org/advanced/premine/) إيردروب وإطلاق الديكريد (مصدر مشترك لسوء الفهم)، ويصف [التحقق من الأصوات](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) كيفية التحقق من أصوات التذاكر، كما توفر [المحافظ الصلبة](https://docs.decred.org/wallets/hardware-wallets/) معلومات أساسية عن محافظ الأجهزة التي تدعم DCR. تم تعديل صفحة [مقدمة الإدارة للديكريد](https://docs.decred.org/governance/overview/) من أجل تفسير أفضل للتصويت بالتذاكر ودور بوليتيا في صنع القرار.
+[المستندات](https://github.com/decred/dcrdocs): صفحات جديدة: يصف [التعدين الأولي](https://docs.decred.org/advanced/premine/) إيردروب وإطلاق الديكريد (مصدر مشترك لسوء الفهم)، كما يصف [التحقق من الأصوات](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) كيفية التحقق من أصوات التذاكر، كما تقدم [المحافظ الصلبة](https://docs.decred.org/wallets/hardware-wallets/) معلومات أساسية عن محافظ الأجهزة التي تدعم DCR. كما تم تعديل صفحة [مقدمة الإدارة للديكريد](https://docs.decred.org/governance/overview/) من أجل تفسير أفضل للتصويت بالتذاكر ودور بوليتيا في صنع القرار.
 
-[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): بدأ تشغيل روبوت جديد على تويتر في أواخر شهر مارس. قم بذكر [dcrtimestampbot@](https://twitter.com/dcrtimestampbot) في تعليق وسيقوم الروبوت بتخزين الموضوع في أي بي إف إس، استخدام dcrtime لتثبيت البيانات على بلوكشين الديكريد، ومراسلة المستخدم الذي استدعاه.
+[dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): بدأ تشغيل روبوت جديد على تويتر في أواخر شهر مارس. قم بذكر [dcrtimestampbot@](https://twitter.com/dcrtimestampbot) في تعليق وسيقوم الروبوت بتخزين الموضوع في "أي بي إف إس"، استخدام dcrtime لتثبيت البيانات على بلوكشين الديكريد، ومراسلة المستخدم الذي استدعاه.
 
-إحصائيات نشاط التطوير لشهر أبريل: 326 من المشاريع النشطة، 509  إيداع رئيسي، 96 ألف إضافة، 55 ألف عملية حذف من خلال 10 سجلات. جاءت المساهمات من 1-9 مطورين لكل سجل.
+إحصائيات نشاط التطوير لشهر أبريل: 326 من المشاريع النشطة، 509 إيداع رئيسي، 96 ألف إضافة، 55 ألف عملية حذف من خلال 10 سجلات. جاءت المساهمات من 1-9 مطورين لكل سجل.
 
 ## الأشخاص
 
-تهانينا لخمسة مساهمين جدد تم إدراج أسماؤهم في قائمة [decred.org](https://decred.org/contributors/):
+تهانينا لخمسة مساهمين جدد الذين تم إدراج أسماؤهم في قائمة [decred.org](https://decred.org/contributors/):
 
 * Dominguez (الملقب ب anshawblack@ في التسويق)
 * Thiago de Freitas Figueiredo (الملقب ب thi4go@، مطور)
@@ -54,13 +54,13 @@
 * Dominic Ting (الملقب ب dominic.d@، مدير مجتمع، الصين)
 * Michael Guimaraes (الملقب ب michae2xl@، مدير مجتمع)
 
-تمت إزالة مصمم غير نشط من decred.org: Kärt Koosa (الملقب ب kart@، رسام)
+تمت إزالة مصمم غير نشط من decred.org: الحامل لإسم Kärt Koosa (والملقب ب kart@، رسام)
 
 ## الإدارة
 
-اكتمل [إجماع التصويت](https://voting.decred.org/) على تنفيذ DCP0004 في 11 أبريل بموافقة 100٪ تقريبًا مع مشاركة نشطة ل 54.5٪ من التذاكر التي صوتت بنعم. سيتم تفعيل القواعد الجديدة في 9 ماي، انظر الملاحظة أعلاه حول تحديث برنامج العقدة.
+اكتمل [إجماع التصويت](https://voting.decred.org/) لتنفيذ DCP0004 في 11 أبريل بموافقة 100٪ تقريبًا مع مشاركة نشطة ل 54.5٪ من التذاكر التي صوتت بنعم. سيتم تفعيل القواعد الجديدة في 9 ماي، انظر الملاحظة أعلاه حول تحديث برنامج العقدة.
 
-في أبريل، تلقت [الخزنة](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) 15،460 DCR وأنفقت 13،943 DCR. باستخدام معدل المتوسط اليومي لشهر أبريل ب DCR/USD والذي يقدر ب 24.22 دولارًا، ستكون الخزينة قد تلقت 374 ألف دولارا وأنفقت 338 ألف دولارا. نظرًا لأن هذه المدفوعات كانت مخصصة للعمل الذي تم إنجازه في شهر مارس، فإنه من المفيد أيضًا أخذها بعين الاعتبار في سياق متوسط السعر اليومي لشهر مارس البالغ 18.14 دولار - وفي هذه الحالة ستبلغ الأرقام المستلمة/المنفقة بالدولار 280 ألف دولار / 253 ألف دولار. اعتبارًا من 7 ماي، بلغ رصيد الخزينة 610،200 DCR (أي ما يعادل 15.4 مليون دولار أمريكي بقيمة 25.20 دولارًا أمريكيًا).
+في أبريل، تلقت [الخزنة](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) 15،460 DCR وأنفقت 13،943 DCR. باستخدام معدل المتوسط اليومي لشهر أبريل ب DCR/USD والذي يقدر ب 24.22 دولارًا، ستكون الخزينة قد تلقت 374 ألف دولارا وأنفقت 338 ألف دولارا. ونظرًا لأن هذه المدفوعات كانت مخصصة للعمل الذي تم إنجازه في شهر مارس، فإنه من المفيد أيضًا أخذها بعين الاعتبار في سياق متوسط السعر اليومي لشهر مارس البالغ 18.14 دولار - وفي هذه الحالة ستبلغ الأرقام المستلمة/المنفقة بالدولار 280 ألف دولار / 253 ألف دولار. اعتبارًا من 7 ماي، بلغ رصيد الخزينة 610،200 DCR (أي ما يعادل 15.4 مليون دولار أمريكي بقيمة 25.20 دولارًا أمريكيًا).
 
 في الأسفل حالة المقترحات اعتبارًا من 7 ماي:
 
@@ -74,7 +74,7 @@
 
 * [تم إدماج زوج عملة الأوراق النقدية على منصة التبادل EXMO](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) بطلب من vadymprykhodko@ ل 23،800 دولارا لدمج DCR على منصة التبادل EXMO مقابل BTC و 2 من أزواج  عملات الأوراق النقدية (DCR / RUB ، DCR / UAH). تمت الموافقة على هذا الاقتراح بنسبة تصويت بلغت 62.6٪ بنعم.
 
-* [تعديل دستور الديكريد](https://proposals.decred.org/proposals/fd56bb79e0383f40fc2d92f4473634c59f1aa0abda7aabe29079216202c83114) بواسطة richard-red@ يقترح القيام بمجموعة من التعديلات على دستور الديكريد لتحديثه، ويوضح وضع الدستور داخل المشروع. انتهى التصويت بـنسبة تصويت بلغت 99٪ نعم من بين 12 ألف صوت. شكرا لجميع من قدموا مدخلات في هذه العملية.
+* [تعديل دستور الديكريد](https://proposals.decred.org/proposals/fd56bb79e0383f40fc2d92f4473634c59f1aa0abda7aabe29079216202c83114) بواسطة richard-red@ يقترح القيام بمجموعة من التعديلات على دستور الديكريد لتحديثه، ويوضح وضع الدستور داخل المشروع. انتهى التصويت بـنسبة تصويت بلغت 99٪ بنعم من بين 12 ألف صوت. شكرا لجميع من قدموا مدخلات في هذه العملية.
 
 * [رحلة إلى مستقبل العمل - سرد قصة DCR عبر بوليتيا](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) بواسطة jer979@ والذي يطالب ب 40 DCR لكتابة مقال يحكي عن تجربة تقديم الاقتراح والانتقال إلى مراحل المراجعة والتصويت -مع دفع 60 DCR أخرى إذا وردت المقالة في منفذ توزيع "من المستوى 1".
 
@@ -86,7 +86,7 @@
 
 للحصول على نظرة عامة أكثر تفصيلاً عن بوليتيا و الإجراءات ذات الصلة، راجع [العدد 14](https://medium.com/politeia-digest/issue-14-apr-1-apr-16-2019-1ad873ccafb) من بوليتيا ديجيست.
 
-تقدم نسخة ألفا ل dcrdata الآن [الرسوم البيانية](https://alpha.dcrdata.org/proposals) التي تُظهر الأصوات بمرور الوقت، بما في ذلك تحديثات في الوقت الفعلي للأصوات الجاري تنفيذها. هذا يجعل بيانات بوليتيا المخزنة في [مستودع](https://github.com/decred-proposals/mainnet) Git أيسر وصولا.
+تقدم نسخة ألفا ل dcrdata الآن [الرسوم البيانية](https://alpha.dcrdata.org/proposals) التي تُظهر نسبة الأصوات  على مر الوقت، بما في ذلك تحديثات في الوقت الفعلي للأصوات الجاري تنفيذها. هذا يجعل بيانات بوليتيا المخزنة في [مستودع](https://github.com/decred-proposals/mainnet) Git أيسر وصولا.
 
 ## الشبكة
 
