--- a/journal/201904.md
+++ b/journal/201904.md
@@ -4,15 +4,15 @@
 
 ![abstract art](../img/journal-201904-384.jpg "Blue Dragon by @saender. Dragon resembles power/fear/terror/chaos. Blue dragon is calm and intelligent, but nevertheless powerful. It resembles a balance of power and wisdom.")
 
-شهد شهر أبريل إطلاق الشبكة البرقية على تيستنيت الخاص بـالديكريد! هذا هو الوقت المناسب [للتحقق منه](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e)، القيام ببعض الاختبارات، والبدء في البناء على الشبكة البرقية للديكريد.
+شهد شهر أبريل إطلاق الشبكة البرقية على الشبكة التجريبية الخاصة بـالديكريد! هذا هو الوقت المناسب [لإلقاء نظرة عليها](https://hackernoon.com/decred-wants-you-be-one-of-the-first-to-test-the-dcr-lightning-network-dd9ecf14d95e)، والقيام ببعض الاختبارات، والبدء في البناء على الشبكة البرقية لديكريد.
 
-ستصبح الشبكة البرقية متاحة على الشبكة الرئيسية عندما يتم تفعيل DCP0004 في 9 من ماي (على الكتلة 342،784)، لكن الأمر سيستغرق بعض الوقت قبل إنشائها وثباتها بدرجة كافية للاستخدام على شبكة الإختبار - الشبكة الرئيسية في الوقت الحالي هي المكان الأنسب لتجربة الشبكة البرقية للديكريد. من المهم أيضًا **أن تتم ترقية كافة العقد قبل 9 ماي لتجنب التفرع خارج للشبكة!**
+ستصبح الشبكة البرقية متاحة على الشبكة الرئيسية عندما يتم تفعيل DCP0004 في 9 من ماي (على الكتلة 342،784)، لكن الأمر سيستغرق بعض الوقت قبل إنشائها وثباتها بدرجة كافية للاستخدام على شبكة الرئيسية - الشبكة التجريبية في الوقت الحالي هي المكان الأنسب لتجربة الشبكة البرقية لديكريد. من المهم أيضًا **أن تتم ترقية كافة العقد قبل 9 ماي لتجنب التفرع خارج للشبكة!**
 
-شهدت برمجيات بوليتيا جولة هامة من التحسينات في الأداء وخصائص جديدة (مثل عرض الاختلافات للنسخ المقترحة) والتي نشرت على موقع المقترحات المباشرة. أصبح نظام إدارة المقاولين جاهزا للعمل بشكل أساسي وسيتم استخدامه لجمع ومعالجة فواتير المقاولين لشهر أبريل.
+شهدت برمجيات بوليتيا جولة هامة من التحسينات في الأداء وخصائص جديدة (مثل عرض الاختلافات للنسخ المقترحة) والتي نشرت على موقع المقترحات المباشرة. أصبح نظام إدارة المتعاقدين جاهزا للعمل بشكل أساسي وسيتم استخدامه لجمع ومعالجة فواتير المتعاقدين لشهر أبريل.
 
-كانت طبعة هذا الشهر لصحيفة الديكريد ذات إنتاج لامركزي أكثر من المعتاد، مع تراجع bee@ عن الدور المحوري الذي لعبوه حتى الآن (ولكن تم الحفاظ على إمدادات ثابتة من الملاحظات القادمة) بينما يقوم المساهمون الآخرون بدور أكبر مما يفعلون عادة.
+كانت طبعة هذا الشهر لصحيفة الديكريد ذات إنتاج لامركزي أكثر من المعتاد، مع تراجع bee@ عن الدور المحوري الذي لعبه حتى الآن (ولكن تم الحفاظ على إمدادات ثابتة من الملاحظات القادمة) بينما يقوم المساهمون الآخرون بدور أكبر مما يفعلون عادة.
 
-## قم بتحديث عقدك!
+## قم بتحديث عقدتك!
 
 ستفعل القواعد المتغيرة ل [DCP0004](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) التي تم [التصويت عليها](https://voting.decred.org/) بنجاح (تحديث تسلسل قفل القواعد التي تمكن الشبكة البرقية) في 9 ماي (على الكتلة 342،784). بمجرد قيام شخص ما بإجراء معاملة تعتمد على هذه القاعدة المغايرة، ستتوقف أي عقد لا تزال تتبع القواعد القديمة (أي نسخة للبرنامج قبل الإصدار 1.4.0) عن متابعة سلسلة الديكريد الشرعية. لذلك من المهم أن تقوم جميع العقد (المعدنين، الناخبين، المستخدمين، التجار ومقدمي الخدمات) بتحديث برامج الديكريد الخاصة بهم إلى النسخة 1.4.0 قبل 9 ماي. **لا تتفرع خارج الشبكة في 9 ماي!**
 
@@ -24,13 +24,13 @@
 
 [ديكريديتون](https://github.com/decred/decrediton): استمر العمل على جعل تصميم ديكريديتون أكثر استجابة (بحيث يمكن استخدامه على شاشات أصغر حجما)، مع استكمال التصاميم المستجيبة لجميع المشاهدات تقريبا والتي ستجدها في هذه [المسألة الرئيسية](https://github.com/decred/decrediton/issues/1820). كما تم [تنفيذ](https://github.com/decred/decrediton/pull/2094) التصميم الجديد المتجاوب في `إنشاء عرض محفظة جديدة`. وقد تم فتح [طلب سحب](https://github.com/decred/decrediton/pull/2107) لإضافة واجهة مستخدم محفظة الشبكة البرقية إلى ديكريديتون؛ سيتيح هذا الإصدار الأولي لمستخدمي ديكريديتون تنفيذ إجراءات مثل فتح/إغلاق القناة، إضافة/سحب الأموال، إنشاء الفواتير، وإرسال المدفوعات.
 
-[بوليتيا](https://github.com/decred/politeia): تم [نشر](https://twitter.com/marco_peereboom/status/1120398754216062978) تحديث على موقع الاقتراحات المباشرة والذي سيجلب تحسينات ملحوظة في الأداء، كما يضيف مستعرض الإختلاف إلى القائمة المنسدلة لمشاهد محفوظات إصدار الاقتراح، وتغيير الترتيب الافتراضي للتعليقات حتى تظهر التعليقات الأعلى درجة أولا. أصبح نظام إدارة المقاول جاهز للاستخدام وسيستخدم من قبل المقاولين لإرسال فواتيرهم لشهر أبريل.
+[بوليتيا](https://github.com/decred/politeia): تم [نشر](https://twitter.com/marco_peereboom/status/1120398754216062978) تحديث على موقع الاقتراحات المباشرة والذي سيجلب تحسينات ملحوظة في الأداء، كما يضيف مستعرض الإختلاف إلى القائمة المنسدلة لمشاهد محفوظات إصدار الاقتراح، وتغيير الترتيب الافتراضي للتعليقات حتى تظهر التعليقات الأعلى درجة أولا. أصبح نظام إدارة المتعاقد جاهز للاستخدام وسيستخدم من قبل المتعاقدين لإرسال فواتيرهم لشهر أبريل.
 
-[dcrlnd](https://github.com/decred/dcrlnd): الشبكة البرقية (LN) للديكريد حية على شبكة الإختبار. بعد شهور من العمل الشاق والعديد من التغييرات عبر المجموعة الكاملة للبرمجيات، تم [إصدار](https://matheusd.com/post/announcing-dcrlnd/) منفذ الديكريد الرسمي من [lnd daemon](https://github.com/lightningnetwork/lnd) الأصلي، [dcrlnd](https://github.com/decred/dcrlnd)، وأصبح وجاهزا للإستخدام على شبكة الاختبار. كما تم إعتماد جميع اختبارات الوحدة والإدماج لمشروع الشبكة البرقية، وقد قارب الإنتهاء [الدمج](https://github.com/decred/decrediton/pull/2107) الأولي مع ديكريديتون.
+[dcrlnd](https://github.com/decred/dcrlnd): الشبكة البرقية (LN) للديكريد حية على شبكة التجريبية. بعد شهور من العمل الشاق والعديد من التغييرات عبر المجموعة الكاملة للبرمجيات، تم [إصدار](https://matheusd.com/post/announcing-dcrlnd/) منفذ الديكريد الرسمي من [lnd daemon](https://github.com/lightningnetwork/lnd) الأصلي، [dcrlnd](https://github.com/decred/dcrlnd)، وأصبح وجاهزا للإستخدام على شبكة الاختبار. كما تم إعتماد جميع اختبارات الوحدة والإدماج لمشروع الشبكة البرقية، وقد قارب الإنتهاء [الدمج](https://github.com/decred/decrediton/pull/2107) الأولي مع ديكريديتون.
 
 تم [تصميم](https://github.com/matheusd/lightning-faucet/pull/4) صنبور الشبكة البرقية lnd لإضفاء شكل ومظهر لائقين للديكريد. تحقق [هنا](https://testnet-dcrln-01.davec.name/) بإلقاء نظرة خاطفة على واحدة من عدة صنابير لشبكة الإختبار.
 
-يجري العمل على إعداد الشبكة البرقية على الشبكة الرئيسية، وسيتم تقنيا تمكين الشبكة البرقية على الشبكة الرئيسية بعد [تفعيل](https://explorer.dcrdata.org/agendas) مخطط `fixlnseqlock` في الكتلة 342،784 في 9 ماي. سيستغرق بناء الشبكة وتحسين تجربة المستعملين بعض الوقت. وينبغي أن يعتبر استخدام الشبكة البرقية التابعة للديكريد في الوقت الراهن تجريبيا ولا يجب إستعمال مبالغ كبيرة من DCR. التيستنيت هي المكان الذي سيحدث  فيه اتخاذ إجراءات الشبكة البرقية لبعض الوقت. يمكنك متابعة نمو تيستنيت الشبكة البرقية من خلال هذا [الرسم البياني للشبكة](http://ln-map.jamieholdstock.com/).
+يجري العمل على إعداد الشبكة البرقية على الشبكة الرئيسية، وسيتم تقنيا تمكين الشبكة البرقية على الشبكة الرئيسية بعد [تفعيل](https://explorer.dcrdata.org/agendas) مخطط `fixlnseqlock` في الكتلة 342،784 في 9 ماي. سيستغرق بناء الشبكة وتحسين تجربة المستخدم بعض الوقت. وينبغي أن يعتبر استخدام الشبكة البرقية التابعة للديكريد في الوقت الراهن تجريبيا ولا يجب إستعمال مبالغ كبيرة من DCR. الشبكة التجريبية هي المكان الذي سيحدث  فيه اتخاذ إجراءات الشبكة البرقية لبعض الوقت. يمكنك متابعة نمو الشبكة البرقية على الشبكة التجريبية من خلال هذا [الرسم البياني للشبكة](http://ln-map.jamieholdstock.com/).
 
 [dcrandroid](https://github.com/decred/dcrandroid): يستمر إصلاح الأخطاء الطفيفة وتحسينات اللغة. أصبح خيار التوثيق البيومتري الاختياري [قيد التنفيذ](https://github.com/decred/dcrandroid/pull/343) وسيتم إصداره في النسخة التالية، مضيفًا طبقة إضافية من الأمن على رأس إدخال عبارة مرور المحفظة.
 
@@ -38,7 +38,7 @@
 
 [dcrdata](https://github.com/decred/dcrdata): تم إصدار النسخة 4.1.0 ونشرها على [explorer.dcrdata.org](https://explorer.dcrdata.org/). وقد أضيفت ميزة [التتبع المباشر](https://explorer.dcrdata.org/agendas) للأصوات على السلسلة على هذه النسخة من أجل إدخال تغييرات في قواعد الإجماع، إلى جانب إدراج عدد من تحسينات الأداء والتطوير في [ملاحظات الإصدار](https://github.com/decred/dcrdata/releases/tag/release-v4.1.0). كما تمت إضافة قوائم التصويت [لمقترحات بوليتيا](https://alpha.dcrdata.org/proposals) على موقع ألفا ويجري التكرار عليها.
 
-[المستندات](https://github.com/decred/dcrdocs): صفحات جديدة: يصف [التعدين الأولي](https://docs.decred.org/advanced/premine/) إيردروب وإطلاق الديكريد (مصدر مشترك لسوء الفهم)، كما يصف [التحقق من الأصوات](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) كيفية التحقق من أصوات التذاكر، كما تقدم [المحافظ الصلبة](https://docs.decred.org/wallets/hardware-wallets/) معلومات أساسية عن محافظ الأجهزة التي تدعم DCR. كما تم تعديل صفحة [مقدمة الإدارة للديكريد](https://docs.decred.org/governance/overview/) من أجل تفسير أفضل للتصويت بالتذاكر ودور بوليتيا في صنع القرار.
+[المستندات](https://github.com/decred/dcrdocs): صفحات جديدة: يصف [التعدين الأولي](https://docs.decred.org/advanced/premine/) والإسقاط الجوي وإطلاق الديكريد (مصدر شائع لسوء الفهم)، كما يصف [التحقق من الأصوات](https://docs.decred.org/governance/consensus-rule-voting/verifying-votes/) كيفية التحقق من أصوات التذاكر، كما تقدم [المحافظ الصلبة](https://docs.decred.org/wallets/hardware-wallets/) معلومات أساسية عن محافظ الأجهزة التي تدعم DCR. كما تم تعديل صفحة [مقدمة الإدارة(الحوكمة) لديكريد](https://docs.decred.org/governance/overview/) من أجل تفسير أفضل للتصويت بالتذاكر ودور بوليتيا في صنع القرار.
 
 [dcrtimestamptweet](https://github.com/tiagoalvesdulce/dcrtimestamptweet): بدأ تشغيل روبوت جديد على تويتر في أواخر شهر مارس. قم بذكر [dcrtimestampbot@](https://twitter.com/dcrtimestampbot) في تعليق وسيقوم الروبوت بتخزين الموضوع في "أي بي إف إس"، استخدام dcrtime لتثبيت البيانات على بلوكشين الديكريد، ومراسلة المستخدم الذي استدعاه.
 
@@ -56,7 +56,7 @@
 
 تمت إزالة مصمم غير نشط من decred.org: الحامل لإسم Kärt Koosa (والملقب ب kart@، رسام)
 
-## الإدارة
+## الإدارة و الحوكمة
 
 اكتمل [إجماع التصويت](https://voting.decred.org/) لتنفيذ DCP0004 في 11 أبريل بموافقة 100٪ تقريبًا مع مشاركة نشطة ل 54.5٪ من التذاكر التي صوتت بنعم. سيتم تفعيل القواعد الجديدة في 9 ماي، انظر الملاحظة أعلاه حول تحديث برنامج العقدة.
 
