--- a/journal/201904.md
+++ b/journal/201904.md
@@ -307,6 +307,6 @@
 
 قم بزيارة مجلة الديكريد باللغة الإنجليزية على الرابط التالي: [رابط الصفحة](https://xaur.github.io/decred-news/journal/201904.html)
 
-تمت الترجمة إلى اللغة العربية بواسطة: butterfly@
+تمت الترجمة إلى اللغة العربية بواسطة: butterfly@. قام بالمراجعة abdulrahman4@.
 
 </div>
