--- a/journal/201905.md
+++ b/journal/201905.md
@@ -308,5 +308,6 @@
 * المراجعات والتعليقات: chappjc و davecgh و dnldd و Haon و jholdstocj و lukebp و matheusd و raedah
 * صورة العنوان: saender
 
+النسخة الأصلية لمجلة الديكريد لشهر ماي متوفرة على هذا الرابط [هنا](https://medium.com/decred/decred-journal-may-2019-62166706ee37).
 
 </div>
